--- a/src/style/General.css
+++ b/src/style/General.css
@@ -308,5 +308,13 @@ body {
 }
 
 .modal {
+    z-index: 2002 !important;
+}
+
+#appmodal1___BV_modal_outer_,
+#appmodal2___BV_modal_outer_,
+#menumodal1___BV_modal_outer_,
+#menumodal2___BV_modal_outer_,
+#newsmodal1___BV_modal_outer_ {
     z-index: 2001 !important;
 }
