--- a/src/style/General.css
+++ b/src/style/General.css
@@ -311,6 +311,10 @@ body {
     z-index: 2002 !important;
 }
 
+.news-table {
+    white-space: normal;
+}
+
 #appmodal1___BV_modal_outer_,
 #appmodal2___BV_modal_outer_,
 #appmodal3___BV_modal_outer_,
@@ -320,4 +324,3 @@ body {
 #newsmodal1___BV_modal_outer_ {
     z-index: 2001 !important;
 }
-
