--- a/src/style/Apps.css
+++ b/src/style/Apps.css
@@ -31,6 +31,7 @@
     box-shadow: 2px 2px 3px rgb(55 84 170 / 15%),
         0px 0px 4px rgb(255 255 255 / 0%), 7px 7px 15px rgb(55 84 170 / 15%),
         -7px -7px 20px rgb(0 0 0 / 10%), 0px 0px 4px rgb(255 255 255 / 20%) !important;
+    border: 2px solid rgba(221, 221, 221, 0.185) !important;
     transition: 0.5s;
 }
 
