--- a/src/style/News.css
+++ b/src/style/News.css
@@ -91,6 +91,7 @@
     font-size: 15px;
     font-weight: 600;
     transition: 0.2s;
+    border: 2px solid rgba(221, 221, 221, 0.185) !important;
 }
 
 
