--- a/src/style/News.css
+++ b/src/style/News.css
@@ -248,9 +248,7 @@
 }
 
 .news-pin-button,
-.news-visibility-button,
-.news-update-button,
-.news-del-button {
+.news-admin-button {
     position: relative;
     font-size: 1.25rem !important;
     width: max-content;
@@ -265,6 +263,7 @@
     border-color: #343a40;
 }
 
+.news-admin-button,
 .news-pin-button:focus,
 .news-visibility-button:focus,
 .news-update-button:focus,
@@ -272,8 +271,28 @@
     outline: none !important;
 }
 
+.news-visibility-button,
+.news-update-button,
+.news-del-button {
+    position: relative;
+    font-size: 1.25rem !important;
+    width: max-content;
+    height: max-content;
+    text-align: center;
+    vertical-align: middle;
+    user-select: none;
+    background-color: transparent;
+    border: 0;
+    color: #343a40;
+    border-color: #343a40;
+    height: 26px;
+    min-height: 26px;
+    display: flex;
+    align-items: center;
+}
+
 @media (max-height: 768px) {
-    #news-frame{
+    #news-frame {
         grid-template-columns: calc(100% - 200px) 200px;
     }
 }
