--- a/src/style/News.css
+++ b/src/style/News.css
@@ -138,11 +138,14 @@
 .news-row {
     position: relative;
     padding-top: 10px;
-    overflow: auto;
+    grid-area: NewsRow;
+}
+
+.news-wrapper {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    grid-area: NewsRow;
+    overflow: auto;
 }
 
 #news-frame {
@@ -296,4 +299,415 @@
     #news-frame {
         grid-template-columns: calc(100% - 200px) 200px;
     }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.news {
+    position: relative;
+    width: 30%;
+    max-height: 100%;
+    border-radius: 10px;
+    background-color: #fff;
+    border: 2px solid var(--color-mode-4);
+    font-size: 18px;
+    overflow: hidden;
+    cursor: pointer;
+    box-shadow: 0 4px 21px -12px var(--color-mode-shadow-4);
+    transition: box-shadow 0.2s ease, transform 0.2s ease, height 1s ease;
+}
+
+.news-row[focus="right"] .news,
+.news-row[focus="left"] .news,
+.news-row[focus="center"] .news {
+    cursor: default;
+}
+
+.news-textbox-block[img="yes"] {
+    flex: 0 0 calc(40% - 20px);
+    height: 100%;
+    /* display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: max-content auto max-content max-content auto;
+    grid-template-areas:
+      "."
+      "."
+      "."
+      "."
+      "."; */
+}
+
+.news-textbox-block {
+    display: flex;
+    flex-direction: column;
+}
+
+.news-row[focus=""] .news-textbox-block * {
+    cursor: pointer;
+}
+
+.news-textbox-block[img="no"] {
+    flex: 0 0 100%;
+    height: 100%;
+}
+
+.news-row[focus="right"] .news-description,
+.news-row[focus="left"] .news-description,
+.news-row[focus="center"] .news-description {
+    overflow: auto !important;
+}
+
+.news-row[focus="right"] .news-textbox-block,
+.news-row[focus="left"] .news-textbox-block,
+.news-row[focus="center"] .news-textbox-block {
+    padding: 12px 12px 40px 12px;
+}
+
+.news-row[focus="right"] .news-textbox-block .news-img,
+.news-row[focus="left"] .news-textbox-block .news-img,
+.news-row[focus="center"] .news-textbox-block .news-img {
+    display: none;
+}
+
+.news-row[focus=""] .news-textbox-block:after {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    pointer-events: none;
+    background-image: linear-gradient(to bottom,
+            rgba(255, 255, 255, 0),
+            rgba(255, 255, 255, 1) 90%);
+    width: 100%;
+    height: 4em;
+}
+
+.news-row[focus="right"] .news:hover,
+.news-row[focus="left"] .news:hover,
+.news-row[focus="center"] .news:hover,
+.news-row[focus="left"] .news:hover .news-img,
+.news-row[focus="center"] .news:hover .news-img,
+.news-row[focus="right"] .news:hover .news-img {
+    transform: none !important;
+}
+
+.news-row[focus="right"] .news-bar,
+.news-row[focus="left"] .news-bar,
+.news-row[focus="center"] .news-bar {
+    width: 128px;
+    transition: none;
+}
+
+.news-row[focus="right"]:hover .news-bar,
+.news-row[focus="left"]:hover .news-bar,
+.news-row[focus="center"]:hover .news-bar {
+    width: 128px;
+}
+
+.news:hover {
+    box-shadow: 0 34px 32px -33px rgba(0, 0, 0, 0.18);
+    transform: translate(0px, -3px);
+}
+
+.news-img {
+    display: flex;
+    max-height: 100% !important;
+    max-width: 100% !important;
+    transition: transform 0.2s ease !important;
+    overflow: hidden !important;
+    padding-right: 12px !important;
+    margin: auto;
+    align-content: center;
+    align-items: center;
+}
+
+.news-img-preview {
+    display: flex;
+    max-height: 100% !important;
+    max-width: 100% !important;
+    transition: transform 0.2s ease !important;
+    overflow: hidden !important;
+    padding-right: 12px !important;
+    z-index: 2 !important;
+    margin: auto;
+    align-content: center;
+    align-items: center;
+    flex-shrink: 0;
+}
+
+.news:hover .news-img {
+    transform: scale(1.05) rotate(0.5deg) !important;
+}
+
+.news:hover .news-bar {
+    width: 40%;
+}
+
+.news-row[focus=""] .news-textbox {
+    position: relative;
+    padding: 12px 12px 40px 12px;
+    width: 100%;
+    height: 100%;
+    font-size: 17px;
+}
+
+.news-row[focus="right"] .news-textbox,
+.news-row[focus="left"] .news-textbox,
+.news-row[focus="center"] .news-textbox {
+    width: auto;
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+.news-row[focus=""] .news-textbox {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: minmax(0, 100%) max-content;
+    overflow: hidden;
+}
+
+.news-row[focus="right"] .news-img-container,
+.news-row[focus="left"] .news-img-container,
+.news-row[focus="center"] .news-img-container {
+    grid-area: Img !important;
+    flex-grow: 1;
+    display: flex;
+    height: 100%;
+    width: 100%;
+}
+
+.news-row[focus="right"] .news-img-container .news-img,
+.news-row[focus="left"] .news-img-container .news-img,
+.news-row[focus="center"] .news-img-container .news-img {
+    z-index: 200;
+}
+
+.news-row[focus=""] .news-img-container {
+    display: none;
+}
+
+.news-textbox * {
+    position: relative;
+}
+
+.news-title {
+    font-family: "Voces", "Open Sans", arial, sans-serif;
+    font-size: 24px;
+}
+
+.news-subtitle {
+    font-family: "Voces", "Open Sans", arial, sans-serif;
+    color: #888;
+}
+
+.news-bar {
+    left: -2px;
+    width: 20%;
+    height: 5px;
+    padding: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 5px;
+    background-color: #424242;
+    transition: width 0.2s ease;
+    padding: 2px;
+}
+
+.news-blue .news-bar {
+    background-color: #0088ff;
+}
+
+.news-blue::before {
+    background-image: linear-gradient(-70deg, #0088ff, transparent 50%);
+}
+
+.news-red .news-bar {
+    background-color: #d62f1f;
+}
+
+.news-red::before {
+    background-image: linear-gradient(-70deg, #d62f1f, transparent 50%);
+}
+
+.news-green .news-bar {
+    background-color: #40bd00;
+}
+
+.news-green::before {
+    background-image: linear-gradient(-70deg, #40bd00, transparent 50%);
+}
+
+.news-yellow .news-bar {
+    background-color: #f5af41;
+}
+
+.news-yellow::before {
+    background-image: linear-gradient(-70deg, #f5af41, transparent 50%);
+}
+
+.news-orange .news-bar {
+    background-color: #ff5722;
+}
+
+.news-orange::before {
+    background-image: linear-gradient(-70deg, #ff5722, transparent 50%);
+}
+
+.news-brown .news-bar {
+    background-color: #c49863;
+}
+
+.news-brown::before {
+    background-image: linear-gradient(-70deg, #c49863, transparent 50%);
+}
+
+.news-grey .news-bar {
+    background-color: #424242;
+}
+
+.news-grey::before {
+    background-image: linear-gradient(-70deg, #424242, transparent 50%);
+}
+
+.news-customcolor .news-bar {
+    background-color: var(--news-color);
+}
+
+.news-customcolor::before {
+    background-image: linear-gradient(-70deg, var(--news-color), transparent 50%);
+}
+
+.news-textbox-block[img="no"] .news-description {
+    overflow: hidden;
+    font-size: 15px;
+    height: calc(100% - 60px);
+    margin: 5px;
+    color: #424242;
+    text-overflow: ellipsis;
+}
+
+.news-textbox-block[img="yes"] .news-description {
+    overflow: hidden;
+    font-size: 15px;
+    height: 100%;
+    margin: 5px;
+    color: #424242;
+    text-overflow: ellipsis;
+}
+
+.news-tagbox {
+    position: absolute;
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
+    height: 40px;
+    bottom: 0;
+    font-size: 14px;
+    cursor: default;
+    user-select: none;
+    background: #fff;
+    width: 100%;
+    z-index: 100;
+    background-color: var(--color-light);
+}
+
+.news-tag {
+    display: inline-block;
+    height: 1.7rem;
+    font-size: 13px;
+    background: #e0e0e0;
+    color: #777;
+    border-radius: 3px 0 0 3px;
+    line-height: 26px;
+    padding: 0 10px 0 10px;
+    position: relative;
+    margin-right: 10px;
+    cursor: pointer;
+    user-select: none;
+    transition: color 0.2s;
+}
+
+.news-tag-date {
+    height: 1.7rem;
+    font-size: 13px;
+    color: #777;
+    line-height: 26px;
+}
+
+.flip-tagbox {
+    display: inline-block;
+    margin-right: 10px;
+    position: absolute;
+    right: 0;
+    background-color: transparent;
+    perspective: 1000px;
+    /* Remove this if you don't want the 3D effect */
+}
+
+.flip-tagbox-inner {
+    user-select: none;
+    position: relative;
+    right: 0;
+    transition: transform 0.8s;
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform-style: preserve-3d;
+}
+
+.flip-tagbox[adminopt="true"] .flip-tagbox-inner {
+    transform: rotateX(180deg);
+}
+
+.news-tag-date {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.admin-tagbox {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    transform: rotateX(180deg);
+}
+
+.news-tag-date,
+.admin-tagbox {
+    -webkit-backface-visibility: hidden;
+    /* Safari */
+    backface-visibility: hidden;
+    background: #e0e0e0;
+    border-radius: 10px;
+    padding: 0 10px 0 10px;
+}
+
+.news-tag::after {
+    content: "";
+    position: absolute;
+    border-bottom: 13px solid transparent;
+    border-left: 10px solid #e0e0e0;
+    border-top: 13px solid transparent;
+    right: -10px;
+    top: 0;
 }
