--- a/src/style/News.css
+++ b/src/style/News.css
@@ -398,6 +398,7 @@
             var(--color-mode-2));
     width: 100%;
     height: 4em;
+    transition: color 0.2s;
 }
 
 .news-row[focus="right"] .news:hover,
