--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -128,7 +128,7 @@
   --color-mode-1: #27282b;
   --color-mode-2: #2f3136;
   --color-mode-3: #2e3334;
-  --color-mode-4: rgb(119, 119, 119);
+  --color-mode-4: #535353;
   --color-mode-5: #f4f5f8;
   --color-mode-6: #2f3136;
   --color-mode-7: #2c2e33;
