--- a/src/style/News.css
+++ b/src/style/News.css
@@ -84,13 +84,18 @@
     color: transparent;
     background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAQAAAD8IX00AAAAE0lEQVR4AWNgYNgsvRlCgCgwBAA6YQXPi9F1OAAAAABJRU5ErkJggg==), var(--color-mode-2);
     border-radius: 10px;
-    box-shadow: 2px 2px 3px rgb(55 84 170 / 15%), 0px 0px 4px rgb(255 255 255 / 0%), 7px 7px 15px rgb(55 84 170 / 15%), -7px -7px 20px rgb(0 0 0 / 10%), 0px 0px 4px rgb(255 255 255 / 20%) !important;
+    box-shadow: 2px 2px 3px rgb(55 84 170 / 15%), 2px 2px 3px rgb(55 84 170 / 15%),
+        7px 7px 15px rgb(55 84 170 / 15%), -7px -7px 20px rgb(0 0 0 / 10%);
     font-size: 13px;
     cursor: pointer;
     font-size: 15px;
     font-weight: 600;
     transition: 0.2s;
-    border: 2px solid rgba(221, 221, 221, 0.185) !important;
+    border: 2px solid var(--color-mode-4) !important;
+}
+
+#Home.dark .add-news-button {
+    box-shadow: 0 -5px 5px rgba(255, 255, 255, 0.05);
 }
 
 
@@ -122,9 +127,12 @@
     background: url("../patterns/brilliant.png"),
         var(--color-mode-2);
     border-radius: 10px;
-    box-shadow: 2px 2px 3px rgb(55 84 170 / 15%),
-        0px 0px 4px rgb(255 255 255 / 0%), 7px 7px 15px rgb(55 84 170 / 15%),
-        -7px -7px 20px rgb(0 0 0 / 10%), 0px 0px 4px rgb(255 255 255 / 20%) !important;
+    box-shadow: 2px 2px 3px rgb(55 84 170 / 15%), 2px 2px 3px rgb(55 84 170 / 15%),
+        7px 7px 15px rgb(55 84 170 / 15%), -7px -7px 20px rgb(0 0 0 / 10%);
+}
+
+#Home.dark .news-header-title {
+    box-shadow: 0 -5px 5px rgba(255, 255, 255, 0.05);
 }
 
 .news-pagination {
@@ -210,24 +218,6 @@
     .news-container {
         grid-template-rows: 86px calc(100% - 146px);
     }
-}
-
-.news-add-button {
-    grid-area: News-Add;
-    width: 100%;
-    height: 100%;
-    font-weight: 400;
-    color: #212529;
-    text-align: center;
-    vertical-align: middle;
-    user-select: none;
-    background-color: transparent;
-    border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 1.25rem;
-    border-radius: 0.25rem;
-    color: #343a40;
-    border-color: #343a40;
 }
 
 .add-news {
