--- a/src/style/News.css
+++ b/src/style/News.css
@@ -214,9 +214,45 @@
     width: calc(100% - 30px);
 }
 
-@media (max-width: 1048px) {
+@media (max-width: 1350px) {
+    .add-news-button {
+        font-size: 10px;
+    }
+
+    .news-header-title {
+        font-size: 1.5em;
+    }
+
+    .news-title {
+        font-size: 1em;
+    }
+
+    .news-subtitle {
+        font-size: 0.75em;
+    }
+}
+
+@media (max-width: 1100px) {
     .news-container {
+        margin-left: 15px;
         grid-template-rows: 86px calc(100% - 146px);
+    }
+
+    .news {
+        width: 90%;
+        margin: 0 5%;
+    }
+
+    .news-wrapper {
+        display: block;
+        overflow: auto;
+    }
+
+    .news-row[focus='left'] .news-wrapper,
+    .news-row[focus='center'] .news-wrapper,
+    .news-row[focus="right"] .news-wrapper {
+        display: flex;
+        overflow: unset;
     }
 }
 
