--- a/src/style/News.css
+++ b/src/style/News.css
@@ -103,6 +103,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    grid-area: Titre;
 }
 
 #Update-settings svg {
@@ -123,7 +124,6 @@
     justify-content: center;
     display: flex;
     text-align: center;
-    grid-area: Titre;
     background: url("../patterns/brilliant.png"),
         var(--color-mode-2);
     border-radius: 10px;
@@ -235,7 +235,7 @@
 @media (max-width: 1100px) {
     .news-container {
         margin-left: 15px;
-        grid-template-rows: 86px calc(100% - 146px);
+        grid-template-rows: 60px calc(100% - 120px);
     }
 
     .news {
@@ -248,11 +248,26 @@
         overflow: auto;
     }
 
+    .news-header-title {
+        display: none;
+    }
+
+    .searchbar {
+        flex: 0 0 72%;
+    }
+
     .news-row[focus='left'] .news-wrapper,
     .news-row[focus='center'] .news-wrapper,
     .news-row[focus="right"] .news-wrapper {
         display: flex;
         overflow: unset;
+    }
+
+    .news-row[focus='left'] .news,
+    .news-row[focus='center'] .news,
+    .news-row[focus="right"] .news {
+        width: unset;
+        margin: 0;
     }
 }
 
