--- a/src/style/Apps.css
+++ b/src/style/Apps.css
@@ -101,8 +101,8 @@
         display: flex;
     }
 
-    .apps-content-main .b-icon {
-        display: none;
+    .apps-title {
+        line-height: 1.25;
     }
 
     .apps-container {
@@ -115,6 +115,12 @@
 
     .apps-header {
         font-size: 20px;
+    }
+}
+
+@media (max-height:680px) {
+    .apps-content-main .b-icon {
+        display: none;
     }
 }
 
