--- a/src/style/Apps.css
+++ b/src/style/Apps.css
@@ -97,10 +97,6 @@
 }
 
 @media (max-width: 1350px) {
-    .apps-container-main {
-        display: flex;
-    }
-
     .apps-title {
         line-height: 1.25;
     }
@@ -119,8 +115,16 @@
 }
 
 @media (max-height:680px) {
+    .apps-content-main {
+        display: flex;
+    }
+
     .apps-content-main .b-icon {
         display: none;
+    }
+
+    .apps-content-main {
+        display: flex;
     }
 }
 
