--- a/src/style/News.css
+++ b/src/style/News.css
@@ -92,6 +92,7 @@
     font-weight: 600;
     transition: 0.2s;
     border: 2px solid var(--color-mode-4) !important;
+    margin-left: 2.5%;
 }
 
 #Home.dark .add-news-button {
@@ -117,6 +118,7 @@
 
 .news-header-title {
     margin: 0;
+    margin-right: 2.5%;
     align-items: center;
     flex: 0 0 30%;
     color: var(--color-mode-contrast-1);
@@ -232,13 +234,14 @@
 
 @media (max-width: 1100px) {
     .news-container {
-        margin-left: 15px;
+        margin-left: 5%;
         grid-template-rows: 60px calc(100% - 120px);
     }
 
     .news-wrapper {
         display: block;
         overflow: auto;
+        margin-left: 7px;
     }
 
     .news-header-title {
@@ -266,7 +269,7 @@
 
     .news-row:not([focus="right"]):not([focus='center']):not([focus='left']) .news {
         width: 90%;
-        margin-bottom: 10px;
+        margin: 0 auto 10px auto;
     }
 }
 
