--- a/src/theme/theme.css
+++ b/src/theme/theme.css
@@ -124,7 +124,7 @@
       #149CCC,
       #11A8DC,
       #0EB4ED);
-  --color-background-2: #27282b;
+  --color-background-2: #202225;
   --color-mode-1: #27282b;
   --color-mode-2: #2f3136;
   --color-mode-3: #2e3334;
