--- a/src/style/News.css
+++ b/src/style/News.css
@@ -5,7 +5,7 @@
 
 .news-row[focus='right'] #news2 {
     max-width: 100%;
-    width: 95%;
+    width: 100%;
     flex: none;
 }
 
@@ -16,7 +16,7 @@
 
 .news-row[focus='center'] #news1 {
     max-width: 100%;
-    width: 95%;
+    width: 100%;
     flex: none;
 }
 
@@ -27,7 +27,7 @@
 
 .news-row[focus='left'] #news0 {
     max-width: 100%;
-    width: 95%;
+    width: 100%;
     flex: none;
 }
 
@@ -120,7 +120,7 @@
     margin: 0;
     margin-right: 2.5%;
     align-items: center;
-    flex: 0 0 30%;
+    flex: 0 0 25%;
     color: var(--color-mode-contrast-1);
     border: 2px solid rgba(221, 221, 221, 0.185) !important;
     justify-content: center;
@@ -156,6 +156,7 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     height: 100%;
+    margin: 0 2.5%;
 }
 
 #news-frame {
@@ -185,7 +186,8 @@
 
 .news-container {
     position: relative;
-    width: auto;
+    margin-right: auto;
+    width: 100%;
     display: grid;
     grid-template-columns: 100%;
     grid-auto-rows: 60px calc(100% - 120px) 60px;
@@ -208,12 +210,6 @@
     box-sizing: border-box;
 }
 
-.news-container {
-    margin-left: 30px;
-    margin-right: auto;
-    width: calc(100% - 30px);
-}
-
 @media (max-width: 1350px) {
     .add-news-button {
         font-size: 10px;
@@ -234,14 +230,18 @@
 
 @media (max-width: 1100px) {
     .news-container {
-        margin-left: 5%;
         grid-template-rows: 60px calc(100% - 120px);
+    }
+
+    .news-return{
+        right: 7px;
     }
 
     .news-wrapper {
         display: block;
         overflow: auto;
         margin-left: 7px;
+        margin-right: 7px;
     }
 
     .news-header-title {
@@ -249,7 +249,7 @@
     }
 
     .searchbar {
-        flex: 0 0 85%;
+        flex: 0 0 95%;
     }
 
     .add-news-button {
@@ -257,7 +257,7 @@
     }
 
     .admin-view .searchbar {
-        flex: 0 0 65% !important;
+        flex: 0 0 75% !important;
     }
 
     .news-row[focus='left'] .news-wrapper,
