--- a/src/style/News.css
+++ b/src/style/News.css
@@ -154,7 +154,7 @@
 .news-wrapper {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
     height: 100%;
     margin: 0 2.5%;
 }
@@ -210,68 +210,7 @@
     box-sizing: border-box;
 }
 
-@media (max-width: 1350px) {
-    .add-news-button {
-        font-size: 10px;
-    }
 
-    .news-header-title {
-        font-size: 1.5em;
-    }
-
-    .news-title {
-        font-size: 1em;
-    }
-
-    .news-subtitle {
-        font-size: 0.75em;
-    }
-}
-
-@media (max-width: 1100px) {
-    .news-container {
-        grid-template-rows: 60px calc(100% - 120px);
-    }
-
-    .news-return{
-        right: 7px;
-    }
-
-    .news-wrapper {
-        display: block;
-        overflow: auto;
-        margin-left: 7px;
-        margin-right: 7px;
-    }
-
-    .news-header-title {
-        display: none;
-    }
-
-    .searchbar {
-        flex: 0 0 95%;
-    }
-
-    .add-news-button {
-        flex: 0 0 20%;
-    }
-
-    .admin-view .searchbar {
-        flex: 0 0 75% !important;
-    }
-
-    .news-row[focus='left'] .news-wrapper,
-    .news-row[focus='center'] .news-wrapper,
-    .news-row[focus="right"] .news-wrapper {
-        display: flex;
-        overflow: unset;
-    }
-
-    .news-row:not([focus="right"]):not([focus='center']):not([focus='left']) .news {
-        width: 90%;
-        margin: 0 auto 10px auto;
-    }
-}
 
 .add-news {
     position: absolute;
@@ -338,29 +277,9 @@
     padding: 7px 6px;
 }
 
-@media (max-height: 768px) {
-    #news-frame {
-        grid-template-columns: calc(100% - 200px) 200px;
-    }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .news {
     position: relative;
-    width: 30%;
+    width: 32%;
     max-height: 100%;
     border-radius: 10px;
     background-color: #fff;
@@ -765,4 +684,89 @@
 .news-tagbox-button>svg {
     fill: var(--color-mode-contrast-1);
     transition: color 0.2s;
+}
+
+@media (max-width: 726px) {
+    #news-frame {
+        display: block;
+    }
+
+}
+
+@media (max-height: 768px) {
+    #news-frame {
+        grid-template-columns: calc(100% - 200px) 200px;
+    }
+
+    .news-row:not([focus="right"]):not([focus='center']):not([focus='left']) .news {
+        width: 100% !important;
+    }
+
+    .news-header {
+        width: calc(100% - 102px);
+    }
+}
+
+@media (max-width: 1350px) {
+    .add-news-button {
+        font-size: 10px;
+    }
+
+    .news-header-title {
+        font-size: 1.5em;
+    }
+
+    .news-title {
+        font-size: 1em;
+    }
+
+    .news-subtitle {
+        font-size: 0.75em;
+    }
+}
+
+@media (max-width: 1100px) {
+    .news-container {
+        grid-template-rows: 60px calc(100% - 120px);
+    }
+
+    .news-return {
+        right: 7px;
+    }
+
+    .news-wrapper {
+        display: block;
+        overflow: auto;
+        margin-left: 7px;
+        margin-right: 7px;
+    }
+
+    .news-header-title {
+        display: none;
+    }
+
+    .searchbar {
+        flex: 0 0 95%;
+    }
+
+    .admin-view .searchbar {
+        flex: 0 0 75% !important;
+    }
+
+    .add-news-button {
+        flex: 0 0 20%;
+    }
+
+
+    .news-row[focus='left'] .news-wrapper,
+    .news-row[focus='center'] .news-wrapper,
+    .news-row[focus="right"] .news-wrapper {
+        display: flex;
+        overflow: unset;
+    }
+
+    .news-row:not([focus="right"]):not([focus='center']):not([focus='left']) .news {
+        width: 90%;
+        margin: 0 auto 10px auto;
+    }
 }
