--- a/src/style/News.css
+++ b/src/style/News.css
@@ -699,7 +699,7 @@
         width: 100% !important;
     }
 
-    .Settings:not(.hidden)+div+.news-frame {
+    .Settings:not(.hidden)+div+#news-frame {
         margin-top: 260px;
     }
 }
