--- a/src/style/News.css
+++ b/src/style/News.css
@@ -703,8 +703,10 @@
         display: block;
     }
 
+    #Home:not([isonsite]) .news-header,
     .news-header {
         width: calc(100% - 102px);
+        margin-left: unset;
     }
 
     .news-row:not([focus="right"]):not([focus='center']):not([focus='left']) .news {
@@ -750,6 +752,12 @@
 }
 
 @media (max-width: 1100px) {
+    #Home:not([isonsite]) .news-header {
+        width: calc(95% - 250px);
+        /* margin: 0 auto; */
+        margin-left: 5%;
+    }
+
     .news-container {
         grid-template-rows: 60px calc(100% - 120px);
     }
