--- a/src/style/News.css
+++ b/src/style/News.css
@@ -736,23 +736,23 @@
         width: auto;
     }
 
-    .news-textbox[focus="right"] .news-textbox,
-    .news-textbox[focus="center"] .news-textbox,
-    .news-textbox[focus="left"] .news-textbox {
+    .news-row[focus="right"] .news-textbox,
+    .news-row[focus="center"] .news-textbox,
+    .news-row[focus="left"] .news-textbox {
         display: block;
     }
 
-    .news-textbox[focus="right"] .news-textbox-block,
-    .news-textbox[focus="center"] .news-textbox-block,
-    .news-textbox[focus="left"] .news-textbox-block {
+    .news-row[focus="right"] .news-textbox-block,
+    .news-row[focus="center"] .news-textbox-block,
+    .news-row[focus="left"] .news-textbox-block {
         height: 50%;
         padding: 0px 5px 0px 15px;
 
     }
 
-    .news-textbox[focus="right"] .news-img-container,
-    .news-textbox[focus="center"] .news-img-container,
-    .news-textbox[focus="left"] .news-img-container {
+    .news-row[focus="right"] .news-img-container,
+    .news-row[focus="center"] .news-img-container,
+    .news-row[focus="left"] .news-img-container {
         height: calc(50% - 40px);
     }
 }
