--- a/src/style/News.css
+++ b/src/style/News.css
@@ -735,6 +735,9 @@
     #Home:not([isonsite]) .Settings:not(.hidden)+div+#news-frame .news-wrapper {
         width: auto;
     }
+}
+
+@media (max-width: 1000px) {
 
     .news-row[focus="right"] .news-textbox,
     .news-row[focus="center"] .news-textbox,
@@ -750,11 +753,19 @@
 
     }
 
+    .news-row[focus="right"] .news-textbox-block[img="no"],
+    .news-row[focus="center"] .news-textbox-block[img="no"],
+    .news-row[focus="left"] .news-textbox-block[img="no"] {
+        height: 100% !important;
+        padding: 0px 5px 40px 15px;
+    }
+
     .news-row[focus="right"] .news-img-container,
     .news-row[focus="center"] .news-img-container,
     .news-row[focus="left"] .news-img-container {
         height: calc(50% - 40px);
     }
+
 }
 
 @media (max-height: 768px) {
