--- a/src/style/Apps.css
+++ b/src/style/Apps.css
@@ -81,10 +81,7 @@
 #apps-update-btn svg {
     cursor: pointer;
     margin-left: 10px;
-    justify-content: center;
-    text-align: center;
     font-size: 1.5rem;
-    align-content: center;
 }
 
 .apps-update-indicator {
@@ -124,7 +121,8 @@
 
     .apps-icon {
         font-size: 2em;
-        padding: 10px 0 10px 0;
+        padding: 5px 0 5px 0;
+        margin-top: 0;
     }
 }
 
@@ -138,13 +136,27 @@
     }
 }
 
+
+@media (max-height:600px) {
+    .apps-title {
+        line-height: 1.25;
+        font-size: 11px;
+    }
+}
+
+@media (max-height:800px) {
+    .apps-icon {
+        margin-top: 0;
+    }
+}
+
 @media (max-height:680px) {
     .apps-content-main .b-icon {
         display: none;
     }
 }
 
-.apps-content-main:nth-child(1n + 6) {
+.apps-content-main:nth-child(1n + 5) {
     border-color: var(--color-secondary);
     background-color: var(--color-secondary);
 }
