--- a/src/style/News.css
+++ b/src/style/News.css
@@ -86,7 +86,6 @@
     border-radius: 10px;
     box-shadow: 2px 2px 3px rgb(55 84 170 / 15%), 2px 2px 3px rgb(55 84 170 / 15%),
         7px 7px 15px rgb(55 84 170 / 15%), -7px -7px 20px rgb(0 0 0 / 10%);
-    font-size: 13px;
     cursor: pointer;
     font-size: 80%;
     font-weight: 600;
@@ -102,18 +101,17 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: transparent;
+    color: var(--color-mode-contrast-1);
     background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAQAAAD8IX00AAAAE0lEQVR4AWNgYNgsvRlCgCgwBAA6YQXPi9F1OAAAAABJRU5ErkJggg==), var(--color-mode-2);
     border-radius: 10px;
     box-shadow: 2px 2px 3px rgb(55 84 170 / 15%), 2px 2px 3px rgb(55 84 170 / 15%),
         7px 7px 15px rgb(55 84 170 / 15%), -7px -7px 20px rgb(0 0 0 / 10%);
-    font-size: 13px;
     cursor: pointer;
-    font-size: 80%;
     font-weight: 600;
     transition: 0.2s;
+    padding: 0;
+    font-size: 1.25em;
     border: 2px solid var(--color-mode-4) !important;
-    margin-left: 2.5%;
 }
 
 #Home.dark .add-news-button {
