--- a/src/style/News.css
+++ b/src/style/News.css
@@ -188,9 +188,13 @@
 .news-wrapper {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     height: 100%;
     margin: 0 2.5%;
+}
+
+#news0,
+#news1 {
+    margin-right: 2%;
 }
 
 #news-frame {
@@ -826,6 +830,12 @@
 }
 
 @media (max-width: 1100px) {
+
+    #news0,
+    #news1 {
+        margin-right: unset;
+    }
+
     #Home:not([isonsite]) .news-header {
         width: calc(95% - 250px);
         /* margin: 0 auto; */
