--- a/src/style/General.css
+++ b/src/style/General.css
@@ -365,6 +365,7 @@ input[type="checkbox"].checkbox+label::before {
         text-align: start;
         padding-left: 10px;
         margin-top: 10px;
+        font-size: 1.5rem;
     }
 
     .settings-close {
