--- a/src/style/Apps.css
+++ b/src/style/Apps.css
@@ -15,8 +15,7 @@
     height: calc(100% - 60px);
     width: 100%;
     border-radius: 15px;
-    background: url("../patterns/brilliant.png"),
-        var(--color-mode-2);
+    background: var(--color-mode-2);
     box-shadow: 0 4px 21px -12px var(--color-mode-shadow-4);
     transition: 0.5s;
     border: 2px solid var(--color-mode-4);
