--- a/src/style/General.css
+++ b/src/style/General.css
@@ -400,7 +400,7 @@ input[type="checkbox"].checkbox+label::before {
 
     .settings-box #cog-label {
         display: none;
-        position:absolute
+        position: fixed;
     }
 
     .cog {
